--- a/locales/ko.json
+++ b/locales/ko.json
@@ -1,4 +1,14 @@
 {
+	"Kakao help": "열심히 일하겠습니다! 저에게 시킬 수 있는 업무들은 아래 버튼과 같습니다.",
+	"Browser buttons": {
+		"type": "buttons",
+		"buttons": [
+			"Google_app", 
+			"Chrome_app", 
+			"Naver_app"
+		]
+	},
+	"Set browser": "원하는 브라우저를 알려주십시오.",
 	"Help message": "열심히 일하겠습니다! 저에게 시킬 수 있는 업무들은 아래와 같습니다.\n@lang: 언어를 선택해 주세요.\n@add: 제가 일할 Google Analytics 계정을 알려주세요.\n@init: 모든 목록을 초기화 하고 다시 시작합니다.",
 	"Set language": "@lang ko 이런 식으로 알려주시면 제가 원하는 언어를 설정할 수 있습니다.\n아니면 모바일에서 확인하시면 간편합니다~!",
 	"language": {
@@ -28,5 +38,6 @@
 		"text": "제가 아직 모르는 것들이 많이 있습니다. 앞으로 더 많이 공부해서 나아지겠습니다!"
 	},
 	"Auth completed! Welcome,진헌규": "Auth completed! Welcome,진헌규",
-	"Already added GA account: UA-%s": "Already added GA account: UA-%s"
+	"Already added GA account: UA-%s": "Already added GA account: UA-%s",
+	"Auth completed! Welcome %s": "Auth completed! Welcome %s"
 }
